small changes in controllers

--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -84,7 +84,9 @@
 
                         <!-- Optionally, you can add icons to the links -->
                         <li><a href="Produktionsanlageliste"><i class="fa fa-link"></i><span>Produktionsanlagenliste</span></a></li>
-                        <li><a href="MitarbeiterListe"><i class="fa fa-link"></i><span>Mitarbeiterliste</span></a></li>
+                        <li><a href="Mitarbeiter"><i class="fa fa-link"></i><span>Mitarbeiterliste</span></a></li>
+                        <li><a href="Fertigungsteile"><i class="fa fa-link"></i><span>Fertigungsteileliste</span></a></li>
+
                         <li><a href=""><i class="fa fa-link"></i><span>Teileliste</span></a></li>
 
 
