--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -29,13 +29,12 @@
                 <!-- Header Navbar -->
                 <nav class="navbar navbar-static-top" role="navigation">
                     <!-- Sidebar toggle button-->
-                    <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+                    <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button" <span>einklappen</span>
                         <span class="sr-only">Toggle navigation</span>
                     </a>
                     <!-- Navbar Right Menu -->
                     <div class="navbar-custom-menu">
                         <ul class="nav navbar-nav">
-
 
                             <!-- User Account Menu -->
                             <li class="dropdown user user-menu">
@@ -69,20 +68,13 @@
                 <!-- sidebar: style can be found in sidebar.less -->
                 <section class="sidebar">
 
-                    <!-- Sidebar user panel (optional) -->
-                    <div class="user-panel">
-                        <div class="pull-left image">
-                            <img src="img/default-50x50.gif" class="img-circle" alt="User Image">
-                        </div>
 
-                    </div>
                     <!-- search form (Optional) -->
                     <!-- /.search form -->
                     <!-- Sidebar Menu -->
                     <ul class="sidebar-menu" data-widget="tree">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
 
-                        <!-- Optionally, you can add icons to the links -->
+                        <!--<li>@Html.ActionLink("Home", "Index", "Home")</li>-->
                         <li><a href="Produktionsanlageliste"><i class="fa fa-link"></i><span>Produktionsanlagenliste</span></a></li>
                         <li><a href="Mitarbeiter"><i class="fa fa-link"></i><span>Mitarbeiterliste</span></a></li>
                         <li><a href="Fertigungsteile"><i class="fa fa-link"></i><span>Fertigungsteileliste</span></a></li>
@@ -103,34 +95,31 @@
             <div class="content-wrapper">
 
                 <!--
-                <div class="navbar navbar-inverse navbar-fixed-top">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                        </div>
-                        <div class="navbar-collapse collapse">
-                            <ul class="nav navbar-nav">
-                                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                <li>@Html.ActionLink("About", "About", "Home")</li>
-                                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-
-                            </ul>
-                            @Html.Partial("_LoginPartial")
-                        </div>
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                     </div>
-                </div> -->
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("About", "About", "Home")</li>
+                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+                        </ul>
+                        @Html.Partial("_LoginPartial")
+                    </div>
+                </div>
+            </div> -->
 
 
                 @RenderBody()
-                <hr />
-                <footer>
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-                </footer>
+
             </div>
 
             @Scripts.Render("~/bundles/jquery")
@@ -139,15 +128,15 @@
             @RenderSection("scripts", required: false)
             <script src="~/Scripts/adminlte.js"></script>
         </div>
-
+        <!-- Main Footer -->
+        <footer class="main-footer">
+            <!-- To the right -->
+            <div class="pull-right hidden-xs">
+            </div>
+            <!-- Default to the left -->
+            <strong>Copyright &copy; 2019 <a href="#">Pierburg</a>.</strong> All rights reserved.
+        </footer>
     </div>
-    <!-- Main Footer -->
-    <footer class="main-footer">
-        <!-- To the right -->
-        <div class="pull-right hidden-xs">
-        </div>
-        <!-- Default to the left -->
-        <strong>Copyright &copy; 2019 <a href="#">Pierburg</a>.</strong> All rights reserved.
-    </footer>
+
 </body>
 </html>
