prepare for addZeiterfassung

--- a/ZeiterfassungPierburg/Views/Mitarbeiter/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Mitarbeiter/Create.cshtml
@@ -3,7 +3,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<h2>Neue*n Mitarbeiter*In hinzufügen</h2>
+<h2>Mitarbeiter*In hinzufügen</h2>
 
 <section class="content container-fluid">
     <div class="box box-info">
