--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
@@ -34,12 +34,12 @@
                                     <tr>
                                         <td>
                                             <div class="form-group">
-                                                @Html.DropDownListFor(m => m.Produktionsanlage, // 1. Store selected value in Model.State;
+                                                @Html.DropDownListFor(m => m.ProduktionsanlageList, // 1. Store selected value in Model.State;
                                                                                     // when page is rendered after postback,
                                                                                     // take selected value from Model.Produktionsanlage.
 
                                                                       // 2. Take list of values from Model.produktionsanlagen
-                                                                      Model.Produktionsanlage,
+                                                                      Model.ProduktionsanlageList,
 
                                                                       // 3. Text for the first 'default' option
                                                                       "- Wähle die Produktionsanlage -",
@@ -48,6 +48,7 @@
                                                                       new { @class = "form-control" })
                                             </div>
                                         </td>
+                                       
                                         <td>
                                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                             <div class="form-group">
