--- a/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/NeueZeiterfassung/Create.cshtml
@@ -5,158 +5,145 @@
 {
     @Html.AntiForgeryToken()
     <!-- Main content -->
-<section class="content container-fluid">
-    <div class="box box-info">
+    <section class="content container-fluid">
+        <div class="box box-info">
 
-        <div class="box-body">
-            <h2>Neue Mitarbeiter*innen hinzufügen</h2>
+            <div class="box-body">
+                <h2>Neue Mitarbeiter*innen hinzufügen</h2>
 
-            <div class="table-responsive">
-                <table class="table no-margin">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.LabelFor(model => model.Produktionsanlage)
-                            </th>
-                            <th>
-                                @Html.LabelFor(model => model.Datum)
-                            </th>
-                            <th>
-                                @Html.LabelFor(model => model.Schicht)
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <div class="form-group">
-                                    @Html.DropDownListFor(m => m.Produktionsanlage, Model.ProduktionsanlageList, "- Wähle die Produktionsanlage -", new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(model => model.Produktionsanlage, "", new { @class = "text-danger" })
-                                </div>
-                            </td>
-                            <td>
-                                <div class="form-group">
-                                    @Html.EditorFor(model => model.Datum, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Datum, "", new { @class = "text-danger" })
-                                </div>
-                            </td>
-                            <td>
-                                <div class="form-group">
-                                    @Html.DropDownListFor(m => m.Schicht, Model.SchichtList, "- Wähle die Schicht -", new { @class = "form-control" })
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table no-margin">
+                        <thead>
+                            <tr>
+                                <th>
+                                    @Html.LabelFor(model => model.Produktionsanlage)
+                                </th>
+                                <th>
+                                    @Html.LabelFor(model => model.Datum)
+                                </th>
+                                <th>
+                                    @Html.LabelFor(model => model.Schicht)
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <div class="form-group">
+                                        @Html.DropDownListFor(m => m.Produktionsanlage, Model.ProduktionsanlageList, "- Wähle die Produktionsanlage -", new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.Produktionsanlage, "", new { @class = "text-danger" })
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="form-group">
+                                        @Html.EditorFor(model => model.Datum, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Datum, "", new { @class = "text-danger" })
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="form-group">
+                                        @Html.DropDownListFor(m => m.Schicht, Model.SchichtList, "- Wähle die Schicht -", new { @class = "form-control" })
+                                    </div>
+                                </td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
 
-        <div class="box-body">
-            <div class="table-responsive">
-                <table class="table no-margin" id="mitarbeiterTable">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.LabelFor(model => model.Name)
-                            </th>
-                            <th>
-                                @Html.LabelFor(model => model.Fertigungsteil)
-                            </th>
-                            <th>
-                                @Html.LabelFor(model => model.Stückzahl)
-                            </th>
-                            <th>
-                                @Html.LabelFor(model => model.DirZeit)
-                            </th>
-                            <th>
-                                @Html.LabelFor(model => model.InDirZeit)
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                @Html.DropDownListFor(m => m.Name, Model.NameList, "- Wähle Mitarbeiter*in -", new { @class = "form-control", @id = "name" })
-                                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                            </td>
-                            <td>
-                                <div class="form-group">
-                                    @Html.DropDownListFor(m => m.Fertigungsteil, Model.FertigungteilList, "- Wähle Fertigungsteil -", new { @id = "fteil", @class = "form-control" })
+            <div class="box-body">
+                <div class="table-responsive">
+                    <table class="table no-margin" id="mitarbeiterTable">
+                        <thead>
+                            <tr>
+                                <th>
+                                    @Html.LabelFor(model => model.Name)
+                                </th>
+                                <th>
+                                    @Html.LabelFor(model => model.Fertigungsteil)
+                                </th>
+                                <th>
+                                    @Html.LabelFor(model => model.Stückzahl)
+                                </th>
+                                <th>
+                                    @Html.LabelFor(model => model.DirZeit)
+                                </th>
+                                <th>
+                                    @Html.LabelFor(model => model.InDirZeit)
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    @Html.DropDownListFor(m => m.Name, Model.NameList, "- Wähle Mitarbeiter*in -", new { @class = "form-control", @id = "name", @name = "name0" })
+                                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                </td>
+                                <td>
+                                    @Html.DropDownListFor(m => m.Fertigungsteil, Model.FertigungteilList, "- Wähle Fertigungsteil -", new { @id = "fteil", @name = "fteil0", @class = "form-control" })
                                     @Html.ValidationMessageFor(model => model.Fertigungsteil, "", new { @class = "text-danger" })
-                                </div>
-                            </td>
-                            <td>
-                                <div class="form-group">
-                                    <div>
-                                        @Html.EditorFor(model => model.Stückzahl, new { htmlAttributes = new { @id = "st", @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.Stückzahl, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="form-group">
-                                    <div>
-                                        @Html.EditorFor(model => model.DirZeit, new { htmlAttributes = new { @id = "dirzeit", @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.DirZeit, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="form-group">
-                                    <div>
-                                        @Html.EditorFor(model => model.InDirZeit, new { htmlAttributes = new { @id = "indirzeit", @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.InDirZeit, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
+                                </td>
+                                <td>
+                                    @Html.EditorFor(model => model.Stückzahl, new { htmlAttributes = new { @id = "st", @class = "form-control", @name = "st0" } })
+                                    @Html.ValidationMessageFor(model => model.Stückzahl, "", new { @class = "text-danger" })
+                                </td>
+                                <td>
+                                    @Html.EditorFor(model => model.DirZeit, new { htmlAttributes = new { @id = "dirzeit", @class = "form-control", @name = "dirzeit0" } })
+                                    @Html.ValidationMessageFor(model => model.DirZeit, "", new { @class = "text-danger" })
+                                </td>
+                                <td>
+                                    @Html.EditorFor(model => model.InDirZeit, new { htmlAttributes = new { @id = "indirzeit", @class = "form-control", @name = "indirzeit0" } })
+                                    @Html.ValidationMessageFor(model => model.InDirZeit, "", new { @class = "text-danger" })
+                                </td>
+                            </tr>
 
 
-                    </tbody>
-                </table>
-                <div class="box-body">
-                    <div class="table-responsive">
-                        <table class="table" id="sendTable">
+                        </tbody>
+                    </table>
+                    <div class="box-body">
+                        <div class="table-responsive">
+                            <table class="table" id="sendTable">
 
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <div class="form-group">
-                                            <i name="submit" style="font-size: 35px; color:green" type="submit" value="addMitarbeiter" class="glyphicon glyphicon-plus-sign" onclick="AddRow();"></i>
-                                            <i name="submit" style="font-size: 35px; color:red" type="submit" value="addMitarbeiter" class="glyphicon glyphicon-minus-sign" onclick="RemoveRow();"></i>
-                                        </div>
-                                    </td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td>
-                                        <div class="form-group">
-                                            <div>
-                                                <input name="submit" style="font-size: 18px" type="submit" value="Abschicken" class="pull-right btn btn-default" />
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <div class="form-group">
+                                                <i name="submit" style="font-size: 35px; color:green; cursor: pointer; box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7); border-radius:25px; " type="submit" value="addMitarbeiter" class="glyphicon glyphicon-plus-sign" onclick="AddRow();"></i>
+                                                <i name="submit" style="font-size: 35px; color:red; cursor: pointer; box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7); border-radius:25px;" type="submit" value="addMitarbeiter" class="glyphicon glyphicon-minus-sign" onclick="RemoveRow();"></i>
                                             </div>
-                                        </div>
-                                    </td>
-                                </tr>
+                                        </td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td>
+                                            <div class="form-group">
+                                                <div>
+                                                    <input name="submit" style="font-size: 18px; box-shadow: 0 10px 15px -8px rgba(0, 0, 0,.7);" type="submit" value="Abschicken" class="pull-right btn btn-default" />
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
 
-                                @Html.Raw(ViewBag.NewMitarbeiter)
+                                    @Html.Raw(ViewBag.NewMitarbeiter)
 
 
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+
+
+                        </div>
+                        @Html.Label("", (string)ViewBag.Message)
+
+
 
 
                     </div>
-                    @Html.Label("", (string)ViewBag.Message)
-
-
-
-
                 </div>
+                <!-- /.box -->
             </div>
-            <!-- /.box -->
         </div>
-    </div>
-</section>
+    </section>
     <!-- /.content -->
 }
 <div>
@@ -166,12 +153,13 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 
-    <script>
+#    <script>
+
+
     // dynamic droplist https://stackoverflow.com/questions/30084568/populate-dropdownlist-using-ajax-mvc-4
 
     function AddRow() {
        // $("#rowForNewMitarbeiter").load('@Url.Action("AddMitarbeiterHTML", "NeueZeiterfassung")');
-
        // window.location.href = '@Url.Action("AddMitarbeiterHTML", "NeueZeiterfassung")';
 
 
@@ -188,19 +176,19 @@
 
 
         var nameNew = name.cloneNode(true);
-        nameNew.setAttribute("id", "name" + currentIndex);
+        nameNew.setAttribute("name", "name" + currentIndex);
 
         var fteilNew = fteil.cloneNode(true);
-        fteilNew.setAttribute("id", "fteil" + currentIndex);
+        fteilNew.setAttribute("name", "fteil" + currentIndex);
 
         var stNew = st.cloneNode(true);
-        stNew.setAttribute("id", "st" + currentIndex);
+        stNew.setAttribute("name", "st" + currentIndex);
 
         var dirzeitNew = dirzeit.cloneNode(true);
-        dirzeitNew.setAttribute("id", "dirzeit" + currentIndex);
+        dirzeitNew.setAttribute("name", "dirzeit" + currentIndex);
 
         var indirzeitNew = indirzeit.cloneNode(true);
-        indirzeitNew.setAttribute("id", "indirzeit" + currentIndex);
+        indirzeitNew.setAttribute("name", "indirzeit" + currentIndex);
 
         var currentCell = currentRow.insertCell(-1);
         currentCell.appendChild(nameNew);
@@ -218,13 +206,11 @@
         currentCell.appendChild(indirzeitNew);
 
         var rowCount = myTable.rows.length;
-
         console.log(rowCount);
+
 
     }
     function RemoveRow() {
-
-
         var myTable = document.getElementById("mitarbeiterTable").getElementsByTagName('tbody')[0];
         var rowCount = myTable.rows.length;
 
@@ -234,8 +220,6 @@
         else alert('Du musst mindestens einen Mitarbeiter oder eine Mitarbeiterin eingeben');
         var rowCount = myTable.rows.length;
         console.log(rowCount);
-
     }
-
     </script>
 }
